--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "qs": "^6.5.2",
     "vue": "^2.5.17",
     "vue-router": "^3.0.1",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "webpack-war-plugin": "^1.0.0-beta.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.1.1",
